04-kubernetes/ingress-controller/sock-shop-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sock-shop
  namespace: sock-shop
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - sock-shop.ekene.tech
    secretName: sock-shop-tls
  rules:
  - host: sock-shop.ekene.tech
    http:
     paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-end
            port:
              number: 80
